--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,4 +65,4 @@ basicAuthentication.ldap.ssl=${?KAFKA_MANAGER_LDAP_SSL}
 basicAuthentication.realm="Kafka-Manager"
 basicAuthentication.excluded=["/api/health"] # ping the health of your instance without authentification
 
-#kafka-manager.consumer.properties.file=${CONSUMER_PROPERTIES_FILE}
+kafka-manager.consumer.properties.file=${?CONSUMER_PROPERTIES_FILE}
